--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
+remote_theme: CloudCannon/edition-jekyll-template
 title: knowledgebase
 author: Satrya
 description: Some data stuff.
