--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: CloudCannon/edition-jekyll-template
+remote_theme: minimal
 title: knowledgebase
 author: Satrya
 description: Some data stuff.
